# freeml

./: README.md
MLServer/: MLServer.sln  global.json
MLServer/src/MLServer.Application/: MLServer.Application.csproj
MLServer/src/MLServer.Application/AutoMapper/: DomainToViewModelMappingProfile.cs  ViewModelToDomainMappingProfile.cs
MLServer/src/MLServer.Application/Interfaces/: IJobAppService.cs  IUserAccountAppService.cs
MLServer/src/MLServer.Application/Services/: JobAppService.cs  UserAccountAppService.cs
MLServer/src/MLServer.Domain/: MLServer.Domain.csproj
MLServer/src/MLServer.Domain.Core/: MLServer.Domain.Core.csproj
MLServer/src/MLServer.Domain.Core/Bus/: IMediatorHandler.cs
MLServer/src/MLServer.Infra.CrossCutting.Bus/: InMemoryBus.cs  MLServer.Infra.CrossCutting.Bus.csproj
MLServer/src/MLServer.Infra.CrossCutting.Identity/: MLServer.Infra.CrossCutting.Identity.csproj
MLServer/src/MLServer.Infra.CrossCutting.IoC/: MLServer.Infra.CrossCutting.IoC.csproj  NativeInjectorBootStrapper.cs
MLServer/src/MLServer.Infra.Data/: MLServer.Infra.Data.csproj
MLServer/src/MLServer.Services.Api/: Dockerfile  MLServer.Services.Api.csproj  Program.cs  Startup.cs  appsettings.json  web.config
client/: .gitignore  requirements.txt  setup-dev.sql  setup.cfg
client/src/: main.py  utils.py
client/test/: test_update.py  test_util.py
server/: .gitignore  .pre-commit-config.yaml  requirements.txt  server.py  setup-dev.sql  setup-prod.sql
server/src/: server.py
server/test/: test_server.py
web/: .eslintrc.js  package-lock.json
(+99 files in other folders)
