
[metadata]
name = freeml-client
version = 1.0.0
author = Rahul Yedida
author_email = rahul@ryedida.me
description = FreeML Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yrahul3910/freeml
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    colorama
    pycodestyle
    cutie
    tabulate
    requests

[options.entry_points]
console_scripts =
    raise = src.main:_main